[gd_scene load_steps=2 format=3 uid="uid://dha73j0darnn0"]

[ext_resource type="Script" uid="uid://c5daxb8qrtdui" path="res://generators/simple_room_placement/parameter_interface.gd" id="1_wlamq"]

[node name="ParameterInterface" type="Control"]
custom_minimum_size = Vector2(256, 544)
layout_mode = 3
anchors_preset = 0
offset_right = 256.0
offset_bottom = 544.0
size_flags_horizontal = 3
script = ExtResource("1_wlamq")

[node name="PanelContainer" type="PanelContainer" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="Panel" type="Panel" parent="PanelContainer"]
layout_mode = 2

[node name="MarginContainer" type="MarginContainer" parent="PanelContainer"]
layout_mode = 2
size_flags_horizontal = 3
theme_override_constants/margin_left = 8
theme_override_constants/margin_top = 8
theme_override_constants/margin_right = 8
theme_override_constants/margin_bottom = 8

[node name="VBoxContainer" type="VBoxContainer" parent="PanelContainer/MarginContainer"]
layout_mode = 2
theme_override_constants/separation = 12

[node name="FloorProperties" type="VBoxContainer" parent="PanelContainer/MarginContainer/VBoxContainer"]
layout_mode = 2
theme_override_constants/separation = 0

[node name="SectionHeader" type="Label" parent="PanelContainer/MarginContainer/VBoxContainer/FloorProperties"]
layout_mode = 2
text = "Floor Properties"

[node name="Subheader0" type="Label" parent="PanelContainer/MarginContainer/VBoxContainer/FloorProperties"]
layout_mode = 2
theme_override_font_sizes/font_size = 12
text = "Size"

[node name="FloorSize" type="VBoxContainer" parent="PanelContainer/MarginContainer/VBoxContainer/FloorProperties"]
layout_mode = 2
alignment = 2

[node name="HBoxContainer" type="HBoxContainer" parent="PanelContainer/MarginContainer/VBoxContainer/FloorProperties/FloorSize"]
layout_mode = 2
alignment = 2

[node name="Label" type="Label" parent="PanelContainer/MarginContainer/VBoxContainer/FloorProperties/FloorSize/HBoxContainer"]
layout_mode = 2
theme_override_font_sizes/font_size = 12
text = "X:"

[node name="FloorDimensionX" type="SpinBox" parent="PanelContainer/MarginContainer/VBoxContainer/FloorProperties/FloorSize/HBoxContainer"]
layout_mode = 2
min_value = 40.0
max_value = 120.0
value = 60.0

[node name="HBoxContainer2" type="HBoxContainer" parent="PanelContainer/MarginContainer/VBoxContainer/FloorProperties/FloorSize"]
layout_mode = 2
alignment = 2

[node name="Label" type="Label" parent="PanelContainer/MarginContainer/VBoxContainer/FloorProperties/FloorSize/HBoxContainer2"]
layout_mode = 2
theme_override_font_sizes/font_size = 12
text = "Y:"

[node name="FloorDimensionY" type="SpinBox" parent="PanelContainer/MarginContainer/VBoxContainer/FloorProperties/FloorSize/HBoxContainer2"]
layout_mode = 2
min_value = 40.0
max_value = 120.0
value = 60.0

[node name="Subheader1" type="Label" parent="PanelContainer/MarginContainer/VBoxContainer/FloorProperties"]
layout_mode = 2
theme_override_font_sizes/font_size = 12
text = "Room Count"

[node name="RoomCount" type="HBoxContainer" parent="PanelContainer/MarginContainer/VBoxContainer/FloorProperties"]
layout_mode = 2
alignment = 2

[node name="VBoxContainer" type="VBoxContainer" parent="PanelContainer/MarginContainer/VBoxContainer/FloorProperties/RoomCount"]
layout_mode = 2

[node name="HBoxContainer" type="HBoxContainer" parent="PanelContainer/MarginContainer/VBoxContainer/FloorProperties/RoomCount/VBoxContainer"]
visible = false
layout_mode = 2

[node name="Label" type="Label" parent="PanelContainer/MarginContainer/VBoxContainer/FloorProperties/RoomCount/VBoxContainer/HBoxContainer"]
layout_mode = 2
theme_override_font_sizes/font_size = 12
text = "Min:"

[node name="RoomCountMin" type="SpinBox" parent="PanelContainer/MarginContainer/VBoxContainer/FloorProperties/RoomCount/VBoxContainer/HBoxContainer"]
layout_mode = 2
min_value = 4.0
max_value = 12.0
value = 4.0

[node name="HBoxContainer2" type="HBoxContainer" parent="PanelContainer/MarginContainer/VBoxContainer/FloorProperties/RoomCount/VBoxContainer"]
layout_mode = 2

[node name="Label" type="Label" parent="PanelContainer/MarginContainer/VBoxContainer/FloorProperties/RoomCount/VBoxContainer/HBoxContainer2"]
layout_mode = 2
theme_override_font_sizes/font_size = 12
text = "Max:"

[node name="RoomCountMax" type="SpinBox" parent="PanelContainer/MarginContainer/VBoxContainer/FloorProperties/RoomCount/VBoxContainer/HBoxContainer2"]
layout_mode = 2
min_value = 12.0
max_value = 24.0
value = 12.0

[node name="RoomProperties" type="VBoxContainer" parent="PanelContainer/MarginContainer/VBoxContainer"]
layout_mode = 2
theme_override_constants/separation = 0

[node name="SectionHeader" type="Label" parent="PanelContainer/MarginContainer/VBoxContainer/RoomProperties"]
layout_mode = 2
text = "Room Properties"

[node name="Subheader0" type="Label" parent="PanelContainer/MarginContainer/VBoxContainer/RoomProperties"]
layout_mode = 2
theme_override_font_sizes/font_size = 12
text = "Min Size"

[node name="RoomSizeMin" type="VBoxContainer" parent="PanelContainer/MarginContainer/VBoxContainer/RoomProperties"]
layout_mode = 2
alignment = 2

[node name="HBoxContainer" type="HBoxContainer" parent="PanelContainer/MarginContainer/VBoxContainer/RoomProperties/RoomSizeMin"]
layout_mode = 2
alignment = 2

[node name="Label" type="Label" parent="PanelContainer/MarginContainer/VBoxContainer/RoomProperties/RoomSizeMin/HBoxContainer"]
layout_mode = 2
theme_override_font_sizes/font_size = 12
text = "X:"

[node name="RoomSizeMinX" type="SpinBox" parent="PanelContainer/MarginContainer/VBoxContainer/RoomProperties/RoomSizeMin/HBoxContainer"]
layout_mode = 2
min_value = 2.0
max_value = 8.0
value = 4.0

[node name="HBoxContainer2" type="HBoxContainer" parent="PanelContainer/MarginContainer/VBoxContainer/RoomProperties/RoomSizeMin"]
layout_mode = 2
alignment = 2

[node name="Label" type="Label" parent="PanelContainer/MarginContainer/VBoxContainer/RoomProperties/RoomSizeMin/HBoxContainer2"]
layout_mode = 2
theme_override_font_sizes/font_size = 12
text = "Y:"

[node name="RoomSizeMinY" type="SpinBox" parent="PanelContainer/MarginContainer/VBoxContainer/RoomProperties/RoomSizeMin/HBoxContainer2"]
layout_mode = 2
min_value = 2.0
max_value = 8.0
value = 4.0

[node name="Subheader1" type="Label" parent="PanelContainer/MarginContainer/VBoxContainer/RoomProperties"]
layout_mode = 2
theme_override_font_sizes/font_size = 12
text = "Max Size"

[node name="RoomSizeMax" type="VBoxContainer" parent="PanelContainer/MarginContainer/VBoxContainer/RoomProperties"]
layout_mode = 2
alignment = 2

[node name="HBoxContainer" type="HBoxContainer" parent="PanelContainer/MarginContainer/VBoxContainer/RoomProperties/RoomSizeMax"]
layout_mode = 2
alignment = 2

[node name="Label" type="Label" parent="PanelContainer/MarginContainer/VBoxContainer/RoomProperties/RoomSizeMax/HBoxContainer"]
layout_mode = 2
theme_override_font_sizes/font_size = 12
text = "X:"

[node name="RoomSizeMaxX" type="SpinBox" parent="PanelContainer/MarginContainer/VBoxContainer/RoomProperties/RoomSizeMax/HBoxContainer"]
layout_mode = 2
min_value = 8.0
max_value = 32.0
value = 8.0

[node name="HBoxContainer2" type="HBoxContainer" parent="PanelContainer/MarginContainer/VBoxContainer/RoomProperties/RoomSizeMax"]
layout_mode = 2
alignment = 2

[node name="Label" type="Label" parent="PanelContainer/MarginContainer/VBoxContainer/RoomProperties/RoomSizeMax/HBoxContainer2"]
layout_mode = 2
theme_override_font_sizes/font_size = 12
text = "Y:"

[node name="RoomSizeMaxY" type="SpinBox" parent="PanelContainer/MarginContainer/VBoxContainer/RoomProperties/RoomSizeMax/HBoxContainer2"]
layout_mode = 2
min_value = 8.0
max_value = 32.0
value = 8.0

[node name="MiscProperties" type="VBoxContainer" parent="PanelContainer/MarginContainer/VBoxContainer"]
layout_mode = 2
theme_override_constants/separation = 0

[node name="SectionHeader" type="Label" parent="PanelContainer/MarginContainer/VBoxContainer/MiscProperties"]
layout_mode = 2
text = "Misc"

[node name="Subheader0" type="Label" parent="PanelContainer/MarginContainer/VBoxContainer/MiscProperties"]
layout_mode = 2
theme_override_font_sizes/font_size = 12
text = "Room Padding"

[node name="VBoxContainer" type="VBoxContainer" parent="PanelContainer/MarginContainer/VBoxContainer/MiscProperties"]
layout_mode = 2

[node name="HBoxContainer" type="HBoxContainer" parent="PanelContainer/MarginContainer/VBoxContainer/MiscProperties/VBoxContainer"]
layout_mode = 2
alignment = 2

[node name="Label" type="Label" parent="PanelContainer/MarginContainer/VBoxContainer/MiscProperties/VBoxContainer/HBoxContainer"]
layout_mode = 2
theme_override_font_sizes/font_size = 12
text = "X:"

[node name="RoomPaddingX" type="SpinBox" parent="PanelContainer/MarginContainer/VBoxContainer/MiscProperties/VBoxContainer/HBoxContainer"]
layout_mode = 2
max_value = 8.0
value = 1.0

[node name="HBoxContainer2" type="HBoxContainer" parent="PanelContainer/MarginContainer/VBoxContainer/MiscProperties/VBoxContainer"]
layout_mode = 2
alignment = 2

[node name="Label" type="Label" parent="PanelContainer/MarginContainer/VBoxContainer/MiscProperties/VBoxContainer/HBoxContainer2"]
layout_mode = 2
theme_override_font_sizes/font_size = 12
text = "Y:"

[node name="RoomPaddingY" type="SpinBox" parent="PanelContainer/MarginContainer/VBoxContainer/MiscProperties/VBoxContainer/HBoxContainer2"]
layout_mode = 2
max_value = 8.0
value = 1.0

[node name="RoomPadding" type="HBoxContainer" parent="PanelContainer/MarginContainer/VBoxContainer/MiscProperties"]
layout_mode = 2
alignment = 2

[node name="Subheader1" type="Label" parent="PanelContainer/MarginContainer/VBoxContainer/MiscProperties"]
layout_mode = 2
theme_override_font_sizes/font_size = 12
text = "Room Placement"

[node name="Retries" type="HBoxContainer" parent="PanelContainer/MarginContainer/VBoxContainer/MiscProperties"]
layout_mode = 2
alignment = 2

[node name="Label" type="Label" parent="PanelContainer/MarginContainer/VBoxContainer/MiscProperties/Retries"]
layout_mode = 2
theme_override_font_sizes/font_size = 12
text = "Retries:"

[node name="Retries" type="SpinBox" parent="PanelContainer/MarginContainer/VBoxContainer/MiscProperties/Retries"]
layout_mode = 2
max_value = 32.0
value = 6.0
